# xt-enigma2

./: AUTHORS  ChangeLog  README.md  RecordTimer.py  configure.ac  enigma2.bb  mytest.py  skin.py
data/: Makefile.am  keymap.xml  menu.xml  setup.xml  startwizard.xml
data/display220/: skin_display.xml  skin_display_picon.xml
data/displaytext/: skin_display.xml
data/displaytextsmall/: skin_display.xml
data/vfd128/: skin_display.xml
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/AtemioCore/: Makefile.am  __init__.py  plugin.py  setup.xml  ui.py
lib/python/Plugins/SystemPlugins/AtemioCore/meta/: Makefile.am  plugin_atemiocore.xml
lib/python/Plugins/SystemPlugins/AtemioDeviceManager/: ExtraActionBox.py  ExtraMessageBox.py  ExtrasList.py  HddMount.py  HddPartitions.py  HddSetup.py  Makefile.am  MountPoints.py  __init__.py  plugin.py
lib/python/Plugins/SystemPlugins/AtemioDeviceManager/icons/: Makefile.am
lib/python/Plugins/SystemPlugins/CommonInterfaceAssignment/: plugin.py
lib/python/Plugins/SystemPlugins/Satfinder/: plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: BackupRestore.py  Flash_online.py  ImageBackup.py  ImageWizard.py  SoftwareTools.py  imagewizard.xml  plugin.py
main/: bsod.cpp  enigma.cpp
po/: ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  en_GB.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  is.po  it.po  ku.po  lt.po  lv.po  nb.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po
tools/: enigma2.sh.in
(+70 files in other folders)
